--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -68,7 +68,7 @@
       %div.col-xs-5
         %div.caption
           %h3 MyFlix
-          %p Tealeaf Academy Project
+          %p NetFlix clone for Tealeaf Academy Production Quality Rails
         %ul.list-inline
           %li.skills Ruby / Rails
           %li.skills Postgresql
@@ -98,7 +98,7 @@
       %div.col-xs-5
         %div.caption
           %h3 BOManager
-          %p Octopart API Test App
+          %p Rails app to evaluate Octopart electronic component API
         %ul.list-inline
           %li.skills Ruby / Rails
           %li.skills Postgresql
@@ -117,7 +117,7 @@
       %div.col-xs-5
         %div.caption
           %h3 Rotten Potatoes!
-          %p CS169 Rails Project
+          %p Rotten Tomatoes clone for edX CS169.1x/.2x
         %ul.list-inline
           %li.skills Ruby / Rails
           %li.skills Postgresql
@@ -213,7 +213,7 @@
             =image_tag 'camper_leaderboard_thumb.png'
       %div.col-xs-5
         %div.caption
-          %h3 Free Code Camp Leaderboard.
+          %h3 Free Code Camp Leaderboard
           %p Example project using JavaScript, React-Bootstrap, Babel, and SASS
         %ul.list-inline
           %li.skills JavaScript
