--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -27,7 +27,7 @@
 
 .navbar-default .navbar-nav > li > a:hover {
   color: #245682;
-  background: #e1edf7; }
+  background: #edf4fa; }
 
 .navbar-default .navbar-brand {
   padding-left: 30px;
@@ -38,7 +38,7 @@
 
 .navbar-default .navbar-brand:hover {
   color: #245682;
-  background: #e1edf7; }
+  background: #edf4fa; }
 
 #sliders p {
   margin-top: 15px;
@@ -93,9 +93,6 @@ hr {
   border-top: 1px solid #d5e5f3;
   margin: 60px 0 60px 0; }
 
-.anchor {
-  padding-top: 20px; }
-
 .divider-vertical {
   height: 12px;
   margin: 0 0;
@@ -107,10 +104,10 @@ hr {
   padding-right: 0; }
 
 .hero {
-  padding-top: 10px;
-  padding-bottom: 20px;
+  padding-top: 70px;
+  padding-bottom: 30px;
   margin-bottom: 60px;
-  background: #d5e5f3; }
+  background: #edf4fa; }
 
 .center-block {
   display: flex;
