--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -73,10 +73,10 @@ p#bio {
   // font-weight: bold;
 }
 
-#slide-1 { display: none; }
-#slide-2 { display: none; }
-#slide-3 { display: none; }
-#slide-4 { display: none; }
+#fade-1 { display: none; }
+#fade-2 { display: none; }
+#fade-3 { display: none; }
+#fade-4 { display: none; }
 
 .list-inline {
   margin-left: 0;
