edit meteorite reference

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -280,7 +280,7 @@
       %div.col-xs-7
         %div.class.thumbnail
           =link_to 'https://codepen.io/tprsca/full/YxMPap/' do
-            =image_tag 'meteorite_map.png'
+            =image_tag 'meteorite_map_thumb.png'
   / Map
   %section.row
     %div.col-xs-12#contact_map
